crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_intersection_cast_whose_operand_is_lambda.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
interface CloseRunnable extends Runnable, AutoCloseable {
}

class IntersectionCastLambda {
  void method() {
    CloseRunnable runnable =
      (Runnable & AutoCloseable)
        () -> {
        };
  }
}

diagnostics:
(none)
