crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_lambda_assignment_conditional_and_operator_expressions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Operators {
  void method() {
    java.util.function.Function<String, String> trim = (String s) -> s.trim();
    java.util.function.IntUnaryOperator inc = x -> x + 1;
    int a = 1, b = 2, c = 3;
    a = b > c ? b + c * 2 : b | (c ^ (a & b));
  }
}

diagnostics:
(none)
