crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_logical_and_shift_binary_expression_precedence.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class BinaryPrecedence {
  void method(int a, int b, int c) {
    boolean logical = a < b && b < c || c == a;
    int arithmetic = a + b * c - a / b % c;
    int left = a << 1;
    int right = b >> 1;
    int unsigned = c >>> 1;
    int bits = a | (b ^ (c & a));
  }
}

diagnostics:
(none)
