crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_method_invocation_primary_qualified_super_constructor_invocations.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class MethodInvocationQualifiedSuper {
  Inner makeOuter() {
    return null;
  }

  class Inner extends Base {
    Inner() {
      makeOuter().super(0);
    }

    Inner(String value) {
      makeOuter().<String>super(value);
    }
  }
}

class Base {
  Base() {
  }

  Base(int value) {
  }

  <T> Base(T value) {
  }
}

diagnostics:
(none)
