crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_mixed_deep_generic_close_and_relational_greater_than.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class MixedDeepGenericCloseAndGreaterThan {
  boolean method(Object value, Object limit) {
    return value instanceof Box<List<String>> > limit;
  }
}

diagnostics:
(none)
