crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_nested_generic_type_arguments_closed_by_shift_token.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class NestedGenericClose {
  java.util.Map<String, java.util.List<Integer>> value;
}

diagnostics:
(none)
