crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_non_module_import_declaration_forms.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import java.util.*;
import java.util.List;

import static java.util.Collections.*;
import static java.util.Collections.emptyList;

class Imports {
}

diagnostics:
(none)
